add game and base conf

--- a/TickiTackToe/TickiTackToe.Api/appsettings.json
+++ b/TickiTackToe/TickiTackToe.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ticktackdb;Username=postgres;Password=postgres"
+  },
+  "GameConfig": {
+    "GameSize": 3,
+    "WinCondition": 3
+  }
 }
