--- a/TickiTackToe/TickiTackToe.Application/TickiTackToe.Application.csproj
+++ b/TickiTackToe/TickiTackToe.Application/TickiTackToe.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TickiTackToe.Domain\TickiTackToe.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
