--- a/TickiTackToe/TickiTackToe.Infrastructure/TickiTackToe.Infrastructure.csproj
+++ b/TickiTackToe/TickiTackToe.Infrastructure/TickiTackToe.Infrastructure.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TickiTackToe.Application\TickiTackToe.Application.csproj" />
+    <ProjectReference Include="..\TickiTackToe.Domain\TickiTackToe.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
