--- a/TickiTackToe/TickiTackToe.Api/TickiTackToe.Api.csproj
+++ b/TickiTackToe/TickiTackToe.Api/TickiTackToe.Api.csproj
@@ -9,8 +9,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TickiTackToe.Application\TickiTackToe.Application.csproj" />
+    <ProjectReference Include="..\TickiTackToe.Domain\TickiTackToe.Domain.csproj" />
+    <ProjectReference Include="..\TickiTackToe.Infrastructure\TickiTackToe.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
