--- a/TickiTackToe/TickiTackToe.Application/TickiTackToe.Application.csproj
+++ b/TickiTackToe/TickiTackToe.Application/TickiTackToe.Application.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Queries\" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
   </ItemGroup>
 
   <ItemGroup>
