--- a/TickiTackToe/TickiTackToe.Application/TickiTackToe.Application.csproj
+++ b/TickiTackToe/TickiTackToe.Application/TickiTackToe.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
